--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@redwoodjs/core": "8.4.1",
     "@redwoodjs/project-config": "8.4.1",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.5.12"
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "typescript": "^4.9.5"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
