--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@redwoodjs/api": "8.4.1",
-    "@redwoodjs/graphql-server": "8.4.1"
+    "@redwoodjs/graphql-server": "8.4.1",
+    "bcrypt": "^5.1.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5"
   }
 }
