--- a/api/package.json
+++ b/api/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@redwoodjs/api": "8.4.1",
     "@redwoodjs/graphql-server": "8.4.1",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5"
+    "@types/bcrypt": "^5",
+    "@types/jsonwebtoken": "^9"
   }
 }
