--- a/api/package.json
+++ b/api/package.json
@@ -8,10 +8,13 @@
     "bcrypt": "^5.1.1",
     "graphql-upload": "^17.0.0",
     "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0"
+    "jwt-decode": "^4.0.0",
+    "mime": "^4.0.4",
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "@types/bcrypt": "^5",
-    "@types/jsonwebtoken": "^9"
+    "@types/jsonwebtoken": "^9",
+    "@types/mime-types": "^2"
   }
 }
