--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,9 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mime": "^4.0.4",
-    "mime-types": "^2.1.35"
+    "mime-types": "^2.1.35",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5",
