--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@redwoodjs/cli-storybook-vite": "8.4.1",
     "@redwoodjs/core": "8.4.1",
     "@redwoodjs/project-config": "8.4.1",
+    "@types/pdf-parse": "^1.1.4",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "typescript": "^4.9.5"
