--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "api": "workspace:^",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "openapi": "^1.0.1",
     "react-router-dom": "^7.0.1",
     "workspace": "^0.0.1-preview.1"
   }
