--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "jwt-decode": "^4.0.0",
     "mime": "^4.0.4",
     "mime-types": "^2.1.35",
+    "openai": "^4.74.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1"
   },
