--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/pdf-parse": "^1.1.4",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   },
   "eslintConfig": {
@@ -35,6 +36,7 @@
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "openapi": "^1.0.1",
+    "openapi-types": "^12.1.3",
     "react-router-dom": "^7.0.1",
     "workspace": "^0.0.1-preview.1"
   }
