--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
     "mime-types": "^2.1.35",
     "openai": "^4.74.0",
     "pdf-lib": "^1.17.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5",
