--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@redwoodjs/api": "8.4.1",
     "@redwoodjs/graphql-server": "8.4.1",
+    "@whatwg-node/fetch": "^0.10.1",
     "bcrypt": "^5.1.1",
     "graphql-upload": "^17.0.0",
     "jsonwebtoken": "^9.0.2",
