--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "api": "workspace:^",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "openapi": "^1.0.1",
     "openapi-types": "^12.1.3",
     "react-router-dom": "^7.0.1",
