--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "openai": "^4.74.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "stopword": "^3.1.3",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
