Finished positive tests for task 29using Playwright, working on making negative tests later

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ api/src/lib/generateGraphiQLHeader.*
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
