--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -4,8 +4,8 @@
     "allowJs": true,
     "esModuleInterop": true,
     "target": "ES2023",
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "skipLibCheck": false,
     "rootDirs": ["./src", "../.redwood/types/mirror/api/src"],
     "paths": {
@@ -14,7 +14,7 @@
       "@redwoodjs/testing": ["../node_modules/@redwoodjs/testing/api"]
     },
     "typeRoots": ["../node_modules/@types", "./node_modules/@types"],
-    "types": ["jest"],
+    "types": ["jest", "node"],
     "jsx": "react-jsx"
   },
   "include": [
@@ -22,5 +22,8 @@
     "../.redwood/types/includes/all-*",
     "../.redwood/types/includes/api-*",
     "../types"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
