--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.1",
     "@redwoodjs/cli-storybook-vite": "8.4.1",
     "@redwoodjs/core": "8.4.1",
     "@redwoodjs/project-config": "8.4.1",
+    "@types/node": "^22.10.2",
     "@types/pdf-parse": "^1.1.4",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.12",
